Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-3908

rebalance hangs due to underflow of disk_write_queue stat after failing over 2 nodes with default bucket replica set to 2

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 1.7.0
    • 1.7 beta
    • couchbase-bucket
    • Security Level: Public
    • None
    • basestar-347

    Description

      this is under very small load ( < 1% RAM )

      disk write queue is set to 18446744T tera.

      attached the screenshot and diags

      Attachments

        For Gerrit Dashboard: MB-3908
        # Subject Branch Project Status CR V

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            farshid Farshid Ghods (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty