MB-3908 Fix to underflow issue in updating the persistence queue size

Change-Id: I29cde9323534792107bb9223a6adbcf747f9601e
Reviewed-on: http://review.couchbase.org/6642
Reviewed-by: Bin Cui <bin.cui@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>